--- a/manifest.json
+++ b/manifest.json
@@ -3,20 +3,30 @@
     "name": "Discuit Chat",
     "description": "Adds a Party Line to Discuit",
     "version": "0.1.0",
-    "content_scripts": [{
-        "matches": [
-            "https://*.discuit.net/*",
-            "https://*.discuitchat.net/*",
-            "http://localhost/*"
-        ],
-        "js": [
-            "browser-polyfill.min.js",
-            "index.js"
-        ],
-        "css": [
-            "index.css"
-        ]
-    }],
+    "content_scripts": [
+        {
+            "matches": [
+                "https://*.discuit.net/*"
+            ],
+            "js": [
+                "browser-polyfill.min.js",
+                "main.js"
+            ]
+        },
+        {
+            "matches": [
+                "https://*.discuitchat.net/*",
+                "http://localhost/*"
+            ],
+            "js": [
+                "browser-polyfill.min.js",
+                "chat.js"
+            ],
+            "css": [
+                "chat.css"
+            ]
+        }
+    ],
     "icons": {
         "48": "icon.png",
         "96": "icon.png"
