Added some initial support for getting Discuit cookies

--- a/manifest.json
+++ b/manifest.json
@@ -32,7 +32,8 @@
         "96": "icon.png"
     },
     "permissions": [
-        "<all_urls>"
+        "<all_urls>",
+        "cookies"
     ],
     "background": {
         "scripts": [
