--- a/manifest-chrome-local.json
+++ b/manifest-chrome-local.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "Party Line",
     "description": "A browser extension that integrates live chat into Discuit.",
-    "version": "0.1.2",
+    "version": "0.1.3",
     "content_scripts": [
         {
             "matches": [
@@ -24,7 +24,8 @@
             ],
             "css": [
                 "chat.css"
-            ]
+            ],
+            "all_frames": true
         }
     ],
     "icons": {
